k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaming-feed
  namespace: tyvan-tools
  labels:
    app: gaming-feed
spec:
  selector:
    app: gaming-feed
  ports:
    - name: http
      port: 80
      targetPort: http
